--- a/form1.html
+++ b/form1.html
@@ -5,6 +5,68 @@
     <title>Завдання 1</title>
 </head>
 <body>
-
+<form method="post">
+<table>
+    <tr>
+        <td><label for="login">Логін:</label></td>
+        <td><input type="text" name="login" id="login"></td>
+    </tr>
+    <tr>
+        <td><label for="password">Пароль:</label></td>
+        <td><input type="password" name="password" id="password"></td>
+    </tr>
+    <tr>
+        <td><label for="password2">Повторіть пароль:</label></td>
+        <td><input type="password" name="password2" id="password2"></td>
+    </tr>
+    <tr>
+        <td>Стать:</td>
+        <td>
+            <label>
+                <input type="radio" name="gender" id="male" value="man"/>чоловік
+            </label>
+            <label>
+                <input type="radio" name="gender" id="female" value="woman"/>жінка
+            </label>
+        </td>
+    </tr>
+    <tr>
+        <td><label for="city">Виберіть місто:</label></td>
+        <td>
+            <select name="cities[]" id="city" multiple="multiple">
+                <option value="ZT">Житомир</option>
+                <option value="KV">Київ</option>
+                <option value="LV">Львів</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <label>Інтереси:</label>
+        </td>
+        <td>
+            <label>
+                <input type="checkbox" name="interests[]" value="soccer">футбол
+            </label>
+            <label>
+                <input type="checkbox" name="interests[]" value="chess">шахи
+            </label>
+            <label>
+                <input type="checkbox" name="interests[]" value="painting">малювання
+            </label>
+            <label>
+                <input type="checkbox" name="interests[]" value="music">музика
+            </label>
+        </td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>
+            <input type="reset" value="Очистити"/>
+            <input type="submit" value="Відправити"/>
+        </td>
+    </tr>
+</table>
+</form>
 </body>
 </html>
